<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:id="@+id/dialog">

    <TextView
        android:id="@+id/tvResult"
        android:text="@string/app1_tvResult"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvAnswer"
        android:text="@string/app1_tvAnswer"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/ivAnswer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/alien"
        android:scaleType="centerCrop"
        android:layout_margin="16dp"
        android:elevation="10dp"/>

    <Button
        android:id="@+id/btnGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app1_btnGoBack"
        />

</LinearLayout>